# sml_mcps

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  ci-local.sh  codecov.yml
.github/workflows/: ci.yml  release.yml
examples/: http_auth.rs  http_server.rs  simple.rs
src/: lib.rs  pagination.rs  server.rs
src/auth/: jwt.rs  mod.rs
src/transport/: http.rs  mod.rs  stdio.rs
src/types/: error.rs  jsonrpc.rs  mod.rs  protocol.rs
